cmake_minimum_required(VERSION 2.6)
PROJECT(itk-sphere)
FIND_PACKAGE(ITK)
IF(ITK_FOUND)
  INCLUDE(${ITK_USE_FILE})
ELSE(ITK_FOUND)
  MESSAGE(FATAL_ERROR
          "ITK not found. Please set ITK_DIR.")
ENDIF(ITK_FOUND)
FIND_PACKAGE(VTK)
IF(VTK_FOUND)
  INCLUDE(${VTK_USE_FILE})
ELSE(VTK_FOUND)
  MESSAGE(FATAL_ERROR
          "VTK not found. Please set VTK_DIR.")
ENDIF(VTK_FOUND)
ADD_EXECUTABLE(itk-sphere itk-sphere.cpp )
ADD_EXECUTABLE(itk-sphere-label itk-sphere-label.cpp )
ADD_EXECUTABLE(itk-sphere-connect itk-sphere-connect.cpp )
ADD_EXECUTABLE(vtk-sphere-label vtk-sphere-label.cpp )
TARGET_LINK_LIBRARIES(itk-sphere ITKCommon ITKIO ITKniftiio ITKQuadEdgeMesh)
TARGET_LINK_LIBRARIES(itk-sphere-label ITKCommon ITKIO ITKniftiio ITKQuadEdgeMesh)
TARGET_LINK_LIBRARIES(itk-sphere-connect vtkRendering ITKCommon ITKIO ITKniftiio ITKQuadEdgeMesh)
TARGET_LINK_LIBRARIES(vtk-sphere-label vtkRendering )
